fix: fixed chart hide on small screen

--- a/components/template/main/main.module.css
+++ b/components/template/main/main.module.css
@@ -24,7 +24,7 @@
   .main_header {
     flex-direction: column-reverse;
     align-items: center;
-    gap: 0.5rem;
+    gap: 1rem;
   }
 }
 
